# Project_Code

./: Demo工程中相关操作的示意图.pptx  README.md
C++_Study/: CMakeLists.txt  input_test.txt  main.cpp  快捷键
C++_Study/CRReserationSystem/: CRRS_main.cpp  Identity.h  admin.txt  computerRoom.h  computerRoom.txt  globalFile.cpp  globalFile.h  manager.cpp  manager.h  myTool.cpp  myTool.h  order.txt  orderFile.cpp  orderFile.h  student.cpp  student.h  teacher.cpp  teacher.h  teacher.txt  改进功能.md
C++_Study/DesignPattern/: SingletonPattern.cpp  abstractFactory.cpp  simpleFactory.cpp
C++_Study/EmployeeManageSystem/: WorkerFile.csv  boss.cpp  boss.h  common.h  employee.cpp  employee.h  manage_main.cpp  manager.cpp  manager.h  worker.h  workerManager.cpp  workerManager.h
C++_Study/Instance/: Love_Heart.cpp  gusee_number.cpp  isPrime.cpp
C++_Study/Instance/Sort/: heapSort.cpp  quicksort.cpp
C++_Study/STL/: mySTL.cpp  score.cpp
C++_Study/SimpleAccount/: AccountBook.txt  Remarks  account_main.cpp  menus.cpp  operations.cpp  read_cheak.cpp
C++_Study/SpeechContest/: speech.csv  speechManager.cpp  speechManager.h  system_main.cpp
C++_Study/Synchronization/Condition_variable/: conditionTest.cpp
C++_Study/Synchronization/Mutex/: mutex.cpp
C++_Study/Synchronization/Semaphore/: Semaphore.cpp
C++_Study/Synchronization/async/: async.cpp
C++_Study/Test/: MouseClick.cpp  PTA网站题解.md  datacompare.cpp  records.cpp  test.cpp
C++_Study/Test/Object_Orient/: constructor.cpp  operator_overload.cpp  virtualFunction.cpp
C++_Study/Test/Software/: FindSavePath.cpp  HannoAnimation.cpp  novelFind.cpp
C++_Study/Test/template/: test_code.cpp
C++_Study/include/Leetcode/: L_common.h
C++_Study/include/SimpleAccount/: account_item.h  common.h
C++_Study/leetcode/: title_1_300.cpp
C++_Study/leetcode/Tree/: traverse.cpp
DEMO/: CMakeLists.txt  demo.c  main.c
DEMO/AddressBook/: AddressBook.c  test.c
DEMO/Backgammon/: description  game.c  test.c
DEMO/DataStructure/: DataTest.c
DEMO/DataStructure/List/: Linear.c
DEMO/DataStructure/Search/: SearchFunctions.c
DEMO/DataStructure/Sort/: HeapSort.c  QuickSort.c
DEMO/DataStructure/Stack/: linklistStack.c
DEMO/Functions/: BinarySearch.c  BubbleSort.c  leetcode.c
DEMO/Test/: IdeaKey.c  TestFunction.c  c_code_summary  c_code_warehouse
DEMO/include/: AddressBook.h  Backgammon.h
(+9 files in other folders)
